# matmul_benchmarks

./: CMakeLists.txt  README.md
include/: device_matrix.cuh  device_matrix.hpp  kernels.cuh  naive_cpu.hpp
src/: main.cpp  naive_cpu.cpp  naive_gpu.cu  thread_coarsening_matmul.cu  tiled_matmul.cu
